third_party/move/move-compiler-v2/tests/checking/typing/block_empty_invalid.exp

Diagnostics:
error: expected `u64` but found `()`
  ┌─ tests/checking/typing/block_empty_invalid.move:3:10
  │
3 │         ({}: u64);
  │          ^^

error: expected `&u64` but found `()`
  ┌─ tests/checking/typing/block_empty_invalid.move:4:10
  │
4 │         ({}: &u64);
  │          ^^

error: tuples have different arity (0 != 2)
  ┌─ tests/checking/typing/block_empty_invalid.move:5:10
  │
5 │         ({}: (u64, bool));
  │          ^^
